--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,9 @@ body{
 }
 
 .wrapper{
-    width: 100%;
+    max-width: 1440px;
     height: 100%;
+    margin: 0 auto;
 
 }
 /* ----------NAV------------------------- */
